<resources>
    <string name="app_name">MUHAMAD PANI RAYADI-10117144</string>
    <string name="nama">MUHAMAD PANI RAYADI</string>
    <string name="myapps">MY APPS</string>
    <string name="nim">IF4-10117144</string>
    <string name="home">Home</string>
    <string name="daily">Daily Activity</string>
    <string name="friend">Friend List</string>
    <string name="galeri">Gallery</string>
    <string name="musik">Musik Favorite &amp; Video</string>
    <string name="Profile">Profile</string>
    <string name="Profile2">PROFILE</string>
    <string name="title_activity_menu">menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="deskripsi">Lahir di Bandung pada 27 April 1999, anak ke-3 yang pada akhirnya jadi anak ke-1, dulu waktu sebelum lahir sebetulnya saya memiliki
    2 kaka namun ke-2nya tiada karena sakit, saya orang yang cukup kurang bisa bersosialisasi dengan dunia luar karena pekerjaan ayah yang tidak menentu yang mengharuskan
    berpindah-pindah tempat jadi sulit untuk mendapatkan teman yang tetap, saat smpsampai dan sma saya di sekolahkan di pesantren di sana benar-benar menjadi awal
    dari semua kehidupan yang pernah di jalani, memiliki banyak teman dari berbagai daerah, hingga akhirnya saya lulus sekolah lanjut berkuliah di unikom
    dengan jurusan teknik informatika, mengikuti ukm seni budaya karna hobi degan hal-hal seni.</string>

    <string name="hobi">Hobi : Seni, Otomotif, Movie, Games</string>
    <string name="makes">Makes : Aplication design, Programing</string>
    <string name="interest">Interest : Technologi, Otomotif Modification, Games, Music</string>
    <string name="cita">Cita-Cita : Seorang pengusaha, dan Software Enginering</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="interest2">INTEREST</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="e_mail">muhamadpanirayadi.23@gmail.com</string>
    <string name="contac_us">CONTAC US</string>
    <string name="find_me">FIND ME</string>
    <string name="about">About</string>
</resources>
