<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.apps.utsakb.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_daily"
        android:name="com.apps.utsakb.ui.gallery.GalleryFragment"
        android:label="@string/daily"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_galeri"
        android:name="com.apps.utsakb.ui.slideshow.SlideshowFragment"
        android:label="@string/galeri"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_musik"
        android:name="com.apps.utsakb.ui.tools.ToolsFragment"
        android:label="@string/musik"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.apps.utsakb.ui.share.ShareFragment"
        android:label="@string/Profile"
        tools:layout="@layout/fragment_share" />

</navigation>