<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bgclr2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="0sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageView
        android:id="@+id/home_img"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:src="@drawable/coba"
        android:scaleType="fitXY"
        android:baseline="5dp" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="@color/profile_circle"
        android:layout_below="@+id/home_img" />

    <ImageView
        android:id="@+id/home_img_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/pani"
        android:scaleType="centerInside" />
    <TextView
        android:id="@+id/home_tv_nama"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:text="@string/nama"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="40dp"/>
    <TextView
        android:id="@+id/profile"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:text="@string/Profile2"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/AquaDanon"
        android:gravity="center"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="1dp"
        android:layout_below="@+id/view" />

    <TextView
        android:id="@+id/deskripsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deskripsi"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:gravity="center"
        android:layout_below="@+id/profile" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="@color/profile_circle"
        android:layout_below="@+id/deskripsi" />

        <TextView
            android:id="@+id/problem"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:text="@string/contac_us"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/AquaDanon"
            android:gravity="center"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="1dp"
            android:layout_below="@+id/view2" />

        <Button
            android:id="@+id/mail"
            android:layout_width="wrap_content"
            android:layout_height="82dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="0dp"
            android:autoLink="email"
            android:background="@drawable/gmail"
            android:gravity="center"
            android:text="@string/e_mail"
            android:textSize="0dp"
            android:layout_below="@+id/problem"/>

        <Button
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="82dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="0dp"
            android:autoLink="phone"
            android:background="@drawable/phone"
            android:gravity="center"
            android:text="+6289655702899"
            android:textSize="0dp"
            android:layout_below="@+id/problem"/>

        <Button
            android:id="@+id/ig"
            android:layout_width="wrap_content"
            android:layout_height="82dp"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="0dp"
            android:autoLink="web"
            android:background="@drawable/ig"
            android:gravity="center"
            android:text="https://www.instagram.com/pani_rayadi"
            android:textSize="0dp"
            android:layout_below="@+id/problem"/>

        <Button
            android:id="@+id/fb"
            android:layout_width="wrap_content"
            android:layout_height="82dp"
            android:layout_marginLeft="350dp"
            android:layout_marginTop="0dp"
            android:autoLink="web"
            android:background="@drawable/fb"
            android:gravity="center"
            android:text="https://web.facebook.com/muhamad.pani.35"
            android:textSize="0dp"
            android:layout_below="@+id/problem"/>

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:background="@color/profile_circle"
            android:layout_below="@+id/fb" />
        <TextView
            android:id="@+id/find"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:text="@string/find_me"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/AquaDanon"
            android:gravity="center"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="0dp"
            android:layout_below="@+id/view3" />
        <Button
            android:id="@+id/map"
            android:layout_width="wrap_content"
            android:layout_height="82dp"
            android:layout_marginLeft="170dp"
            android:layout_marginTop="0dp"
            android:autoLink="web"
            android:background="@drawable/map"
            android:gravity="center"
            android:text="https://www.google.com/maps/place/Gor+HN+Mandiri+Sport/@-7.1228813,107.4239201,21z/data=!4m12!1m6!3m5!1s0x2e688d0be67a8eaf:0x882ac237dba0ce98!2sBPJS+(Baso+Pedas+Jeletot+Seuhah)!8m2!3d-7.1228159!4d107.4238475!3m4!1s0x2e688ce70fe05877:0x3f224239d29d2744!8m2!3d-7.1228813!4d107.4240569"
            android:textSize="0dp"
            android:layout_below="@+id/find"/>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:background="@color/AquaDanon"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="170dp"
            android:layout_below="@id/map"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>